--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -1,5 +1,7 @@
 <h2>Editing Book</h2>
 <% if @book.errors.any? %>
+  <p><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</p>
+
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
