--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -7,7 +7,7 @@
       <th colspan="3"></th>
     </tr>
   </thead>
-  
+
   <tbody>
     <% @books.each do |book| %>
       <tr>
@@ -23,6 +23,7 @@
 
 <h2>New book</h2>
 <% if @book.errors.any? %>
+  <p><%= pluralize(@book.errors.count, "error") %> prohibited this product from being saved:</p>
   <ul>
     <% @book.errors.full_messages.each do |message| %>
       <li><%= message %></li>
