--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,9 +13,9 @@
  *= require_tree .
  *= require_self
  */
- 
+
  @import "bootstrap";
- 
+
  * {
   margin: 0;
   padding: 0;
@@ -31,5 +31,12 @@ p {
   margin: 33px;
 }
 
-.detail {
+th {
+    padding-bottom: 5px;
+}
+
+td {
+    padding-bottom: 7px;
+    padding-left: 5px;
+    padding-right: 5px;
 }
